--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,14 +1,10 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
 .page {
-  background-color: #000;
+  background-color: #202020;
   font-family: "Inter", Arial, sans-serif;
   margin: 0 auto;
   max-width: 100%;
@@ -20,4 +16,28 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   color: white;
+}
+
+.page__container {
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1024px) {
+  .page__container {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .page__container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page__container {
+    max-width: 320px;
+  }
 }
