--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,40 +1,95 @@
 .footer {
-    max-width: 880px;
-    margin: 67px auto 0;
-    padding-bottom: 60px;
+  margin: 159px 70px 0;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+}
+
+.footer__title {
+  color: #8b8b8b;
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  border-bottom: 1px solid #424242;
+  padding-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.footer__container {
+  display: flex;
+}
+
+.footer__copyright {
+  color: #fff;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  flex: 1 1 auto;
+  margin: 0;
+}
+
+.footer__link {
+  color: #fff;
+  text-align: right;
+  font-family: Inter;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  text-decoration: none;
+  margin-left: 20px;
+}
+
+.footer__link:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    margin: 159px 30px 0;
   }
-  
-  @media screen and (max-width: 890px) {
-    .footer {
-      max-width: 590px;
-    }
+}
+
+@media screen and (max-width: 475px) {
+  .footer {
+    margin: 159px 10px 0;
   }
-  
-  @media screen and (max-width: 600px) {
-    .footer {
-      max-width: 282px;
-      margin: 48px 0 0 27px;
-      padding-bottom: 36px;
-    }
-  }
-  
-  @media screen and (max-width: 320px) {
-    .footer {
-      margin: 48px auto 0;
-    }
+
+  .footer__container {
+    flex-direction: column;
+    align-items: center;
   }
 
   .footer__copyright {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21.78px;
-    color: #545454;
+    order: 3;
+    font-size: 12px;
+    line-height: 15px;
+    color: #8b8b8b;
+    margin-top: 17px;
+  }
+
+  .footer__link {
     margin: 0;
+    margin-bottom: 12px;
   }
-  
-  @media screen and (max-width: 320px) {
-    .footer__copyright {
-      font-size: 14px;
-      line-height: 16.94px;
-    }
+
+  .footer__title {
+    margin-bottom: 30px;
   }
+
+  .footer__title {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .footer__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
