--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,75 +1,152 @@
 .header {
-    max-width: 880px;
-    margin: 0 auto 36px;
-    padding-top: 45px;
-    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  justify-content: space-between;
+  padding: 18px 70px 0;
+}
+
+.header__logo {
+  max-width: 38px;
+  max-height: 38px;
+  margin-bottom: 18px;
+  background-size: cover;
+  margin-right: 39px;
+}
+
+.header__logo:hover {
+  opacity: 0.8;
+}
+
+.header__link-title {
+  color: white;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  text-decoration: none;
+}
+
+.header__link-title:hover {
+  opacity: 0.8;
+}
+
+.header__link-title-green {
+  max-width: 76px;
+  max-height: 32px;
+  border-radius: 3px;
+  background: #3ddc84;
+  margin-left: 30px;
+  padding: 8px 20px;
+  color: #000;
+}
+
+.header__nav {
+  display: flex;
+}
+
+.header__button {
+  color: #fff;
+  text-align: right;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  text-decoration: none;
+  margin-top: 10px;
+  margin-left: 16px;
+}
+
+.header__button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.header__button-account {
+  display: flex;
+  margin: 0;
+  text-decoration: none;
+}
+
+.header__button-account:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.header__title {
+  border-radius: 20px;
+  background: #313131;
+  margin: 0;
+  color: #fff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  height: 25px;
+  padding: 10px 20px 0 20px;
+}
+
+.header__menu-burger {
+  display: none;
+  border: none;
+  background-color: #202020;
+  width: 44px;
+  height: 40px;
+  padding-left: 1px;
+}
+
+.header__menu-burger:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .header__menu-burger {
     display: flex;
-    justify-content: space-between;
   }
-  
-  @media screen and (max-width: 890px) {
-    .header {
-      max-width: 590px;
-    }
+
+  .header__button-account {
+    display: none;
   }
-  
-  @media screen and (max-width: 600px) {
-    .header {
-      margin: 0 0 38.25px;
-      padding-top: 28px;
-    }
+
+  .header__content {
+    display: none;
+  }
+
+  .header {
+    padding: 15px 30px 0;
   }
 
   .header__logo {
-    max-width: 142px;
-    margin-bottom: 41px;
-    background-size: cover;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .header__logo {
-      margin-bottom: 27px;
-      margin-left: 27px;
-      max-width: 103.24px;
-    }
+    margin-top: 3px;
   }
 
   .header__link-title {
-    color: white;
-    margin-right: 0;
-    margin-bottom: 38px;
-    font-size: 18px;
-    line-height: 22px;
-    text-decoration: none;
-    font-weight: 400;
+    margin-top: 5px;
   }
-  
-  .header__link-title:hover {
-    opacity: 0.8;
-  }
-  
-  @media screen and (max-width: 601px) {
-    .header__link-title {
-      margin-bottom: 0;
-    }
+}
+
+@media screen and (max-width: 400px) {
+  .header {
+    padding: 15px 14px 0;
   }
 
-  .header__email {
-    color: white;
-    line-height: 22px;
-    font-size: 18px;
-    font-weight: 500;
-    margin: 0 24px 40px 0;
+  .header__menu-img {
+    width: 40px;
+    height: 43px;
   }
-  
-  @media screen and (max-width: 601px) {
-    .header__email {
-      margin: 0;
-    }
+
+  .header__menu-burger {
+    width: 40px;
+    height: 43px;
   }
-  
-  @media screen and (max-width: 450px) {
-    .header__email {
-      font-size: 10px;
-    }
+
+  .header__link-title {
+    font-size: 10px;
+    line-height: 16px;
+    margin-top: 9px;
   }
+
+  .header__link-title-green {
+    margin-left: 14px;
+    padding: 5px 12px;
+  }
+}
