--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,85 +1,140 @@
-.login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.profile__title {
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 29px;
+  margin: 73px 70px 106px;
+}
+
+.profile__form {
+  display: flex;
+  flex-direction: column;
+  max-width: 410px;
+  margin: 0 auto;
+}
+
+.profile__label {
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 13px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  padding-bottom: 16px;
+  padding-top: 16px;
+}
+
+.profile__line {
+  border: 0.5px solid #424242;
+  width: 410px;
+}
+
+.profile__text {
+  text-align: right;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 13px;
+  background: #202020;
+  border: none;
+}
+
+.profile__text::placeholder {
+  color: #fff;
+}
+
+.profile__button-save {
+  text-align: center;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  width: 410px;
+  background: #202020;
+  border: none;
+  margin-top: 204px;
+  color: #fff;
+}
+
+.profile__button-save:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.profile__button-exit {
+  color: #ee3465;
+  text-align: center;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  width: 410px;
+  background: #202020;
+  border: none;
+  margin-top: 14px;
+  margin-bottom: 70px;
+  text-decoration: none;
+}
+
+.profile__button-exit:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__title {
+    margin-top: 235px;
+    margin-bottom: 80px;
+  }
+  .profile__label {
+    padding-top: 15px;
   }
 
-  .login__title {
-    font-size: 24px;
-    line-height: 29, 05px;
-    font-weight: 900;
-    margin: 24px 0 50px 0;
+  .profile__button-save {
+    margin-top: 195px;
   }
 
-  .login__text {
-    min-width: 354px;
-    border: none;
-    background: none;
-    outline: none;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16, 94px;
-    border-bottom: 1px solid #cccccc;
-    padding-bottom: 8px;
-    margin-bottom: 32px;
-    color: #cccccc;
+  .profile__button-exit {
+    margin-bottom: 269px;
   }
-  
-  .login__text:last-of-type {
-    margin-bottom: 218px;
-  }
-  
-  @media screen and (max-width: 380px) {
-    .login__text {
-      min-width: 280px;
-    }
+}
+
+@media screen and (max-width: 450px) {
+  .profile__title {
+    margin-top: 70px;
+    margin-bottom: 65px;
   }
 
-  .login__signin {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16, 94px;
-    margin: 15px 0 0 0;
+  .profile__line {
+    width: 260px;
+    align-self: center;
   }
 
-  .login__link {
-    color: white;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16, 94px;
-  }
-  
-  .login__link:hover {
-    opacity: 0.8;
-  }
-
-  .login__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .login__button {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21.78px;
-    min-width: 358px;
-    min-height: 50px;
-    border-radius: 2px;
-    border: none;
+  .profile__text {
     padding: 0;
-    margin: 0;
-    transition: 1s;
-    cursor: pointer;
   }
-  
-  .login__button:hover {
-    opacity: 0.8;
+
+  .profile__label {
+    width: 260px;
+    padding-top: 17px;
+    align-self: center;
   }
-  
-  @media screen and (max-width: 380px) {
-    .login__button {
-      min-width: 280px;
-    }
+
+  .profile__button-save {
+    width: 300px;
+    align-self: center;
+    margin-top: 361px;
+    font-size: 12px;
+    line-height: 15px;
   }
+
+  .profile__button-exit {
+    width: 300px;
+    align-self: center;
+    font-size: 12px;
+    line-height: 15px;
+    margin-bottom: 43px;
+  }
+}
