--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-.elements__list {
+.element {
   background: #2f2f2f;
   list-style: none;
   height: 134px;
@@ -126,7 +126,7 @@
     margin: 0;
   }
 
-  .elements__list {
+  .element {
     flex-direction: column;
     justify-content: flex-start;
     width: 300px;
