--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -57,6 +57,10 @@
   cursor: pointer;
 }
 
+.portfolio__item-img {
+  margin-right: 5px;
+}
+
 .portfolio__item-img:hover {
   opacity: 0.6;
   cursor: pointer;
