--- a/src/components/ElementForm/ElementForm.css
+++ b/src/components/ElementForm/ElementForm.css
@@ -40,7 +40,7 @@
   border-bottom: 1px solid #424242;
   padding: 0;
   padding-bottom: 10px;
-  margin-bottom: 24px;
+  margin-bottom: 30px;
   margin-top: 5px;
 }
 
@@ -58,6 +58,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 12px;
+  position: relative;
 }
 
 .form__sign {
@@ -109,8 +110,27 @@
   margin-top: auto;
 }
 
+.form__button_active {
+  box-sizing: border-box;
+  pointer-events: none;
+  background: #fff;
+  border: 1px solid #000000;
+  color: #000000;
+  opacity: 0.4;
+}
+
 .form__button:hover {
   opacity: 0.6;
+}
+
+.form__error {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  color: rgb(185, 70, 70);
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 10px;
 }
 
 @media screen and (max-width: 768px) {
