--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -24,6 +24,7 @@
   justify-content: space-between;
   padding-bottom: 16px;
   padding-top: 16px;
+  position: relative;
 }
 
 .profile__line {
@@ -40,6 +41,7 @@
   background: #202020;
   border: none;
   color: #fff;
+  width: 200px;
 }
 
 .profile__text::placeholder {
@@ -63,6 +65,15 @@
   cursor: pointer;
   margin-top: 200px;
   margin-bottom: 60px;
+}
+
+.profile__button-save_active {
+  box-sizing: border-box;
+  pointer-events: none;
+  background: #fff;
+  border: 1px solid #000000;
+  color: #000000;
+  opacity: 0.2;
 }
 
 .profile__button:hover {
@@ -105,6 +116,19 @@
 .profile__button-exit:hover {
   opacity: 0.6;
   cursor: pointer;
+}
+
+.profile__form-error {
+  position: absolute;
+  top: 34px;
+  right: 0;
+  color: rgb(185, 70, 70);
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 10px;
+  margin: 0;
+  padding: 0;
+  text-align: right;
 }
 
 @media screen and (max-width: 768px) {
