--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,6 +2,11 @@
   margin: 0 70px;
 }
 
+.search__container {
+  display: flex;
+  flex-direction: column;
+}
+
 .search__form {
   border-bottom: 1px solid #424242;
   padding-bottom: 13px;
@@ -40,6 +45,15 @@
 
 .search__img-button {
   padding: 0;
+}
+
+.search__form-error {
+  color: #8b8b8b;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 32px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 768px) {
