исправления после ревью

--- a/src/components/ErrorNotFound/ErrorNotFound.css
+++ b/src/components/ErrorNotFound/ErrorNotFound.css
@@ -32,6 +32,8 @@
   line-height: 17px;
   text-decoration: none;
   margin: 0 auto 60px;
+  background-color: #202020;
+  border: none;
 }
 
 .error__link:hover {
